--- a/tools/index.template.html
+++ b/tools/index.template.html
@@ -22,5 +22,5 @@
 
 <body>
   <div id="app"></div>
-<script src="/bundle.js"></script><script src="/bundle.app.js"></script><script src="/bundle.vendor.js"></script></body>
+</body>
 </html>
